--- a/S1/Makefile
+++ b/S1/Makefile
@@ -13,6 +13,8 @@ vsm: vsm.o code.o
 	$(CC) $(CFLAGS) vsm.o code.o -o vsm
 mcc: mcc.o lex.o tab.o code.o
 	$(CC) $(CFLAGS) mcc.o lex.o tab.o code.o -o mcc
+mcctt: mcctt.o lex.o tab.o code.o
+	$(CC) $(CFLAGS) mcctt.o lex.o tab.o code.o -o mcctt
 testlex: testlex.o lex.o
 	$(CC) $(CFLAGS) testlex.o lex.o -o testlex
 
@@ -24,6 +26,7 @@ tab.o: tab.c tab.h
 code.o: code.c code.h
 vsm.o: vsm.c code.h
 mcc.o: mcc.c lex.h tab.h code.h
+mcctt.o: mcctt.c lex.h tab.h code.h
 testlex.o: testlex.c lex.h
 
 clean: 
